--- a/bootcamp.html
+++ b/bootcamp.html
@@ -23,11 +23,10 @@
           <div class="row-fluid">
             <div class="span10">
 	      <h2>A Data Carpentry Workshop</h2>
-
 	      <h4>Organized by and for interdisciplinary
           biologists and environmental scientists.</h4>
-
-              <h2>{{page.venue}}</h2>
+              <h2>{{page.venue1}}</h2>
+              <h2>{{page.venue2}}</h2>
               {% if page.address %}{{page.address}}<br/>{% endif %}
               {{page.humandate}}
               {% if page.humantime %}<br/>{{page.humantime}}{% endif %}
