--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: bootcamp
 root: .
-venue: NESCent
-address: 2024 W. Main Street, Suite A200, Durham, NC
+venue: Example Venue
+address: Address
 country: United-States
-humandate: May 8-9, 2014
+humandate: May 8-9, 2050
 humantime: 9:00 am - 5 pm
-startdate: 2014-05-08
-enddate: 2014-05-09
+startdate: 2050-05-08
+enddate: 2050-05-09
 latlng: 36.0080203,-78.9232326
 registration: open
-instructor: ["Karen Cranston (NESCent)", "Hilmar Lapp (NESCent)", "Tracy Teal (BEACON)", "Ethan White (Utah State U.)"]
-assistant: ["Darren Boss (iPlant)", "Matt Collins (iDigBio)", "Deb Paul (iDigBio)", "Mike Smorul (SESYNC)"] 
-contact: datacarpentry@nescent.org
-raw: raw.github.com/nescent/2014-05-08-datacarpentry/gh-pages
+instructor: ["Instructor 1"]
+assistant: ["Assistant 1"] 
+contact: admin@datacarpentry.org
+#raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 11257077221
 ---
 <!--
@@ -79,7 +79,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 <p>
   <strong>Where:</strong>
   {{ page.address }}.
-  NESCent has <a href="http://www.nescent.org/about/directions.php" target="_blank">directions on its website</a>; or get directions with
+   Get directions with
   <a href="http://www.openstreetmap.org/?mlat={{ page.latlng | replace:',','&mlon=' }}&zoom=16">OpenStreetMap</a>
   or
   <a href="http://maps.google.com/maps?q={{ page.latlng }}">Google Maps</a>.
@@ -91,12 +91,12 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 -->
 <p>
   <strong>Requirements:</strong>
-  Participants must bring a laptop with a few specific software packages installed. If you will be traveling from out of town, you will need to make your own travel arrangements; note also that the course dates are right before the start of Duke graduation weekend, and therefore <strong>please secure needed accomodations before registering!</strong>
+  Participants must bring a laptop with a few specific software packages installed.
 </p>
 
 <!--
     This block automatically inserts a contact email address if one has been specified for the page.
-    If one hasn't, this block inserts the generic contact address for Software Carpentry.
+    If one hasn't, this block inserts the generic contact address for Data Carpentry.
 -->
 <p>
   <strong>Contact</strong>:
@@ -110,13 +110,11 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 </p>
 
 <p><strong>Twitter</strong>: #datacarpentry</p>
-<p><strong>Etherpad</strong>: <a href="https://etherpad.mozilla.org/nescent-2014-05">https://etherpad.mozilla.org/nescent-2014-05</a></p>
+
 
 <h2>Acknowledgements &amp; Support</h2>
 <div class="pull-right" style="max-width: 320px; padding-left: 6px;">
-  <a href="http://dataone.org" title="DataONE">
-    <img alt="DataONE Logo" src="{{page.root}}/img/DataONE_LOGO.jpg" width="auto"/>
-  </a>
+
 </div>
 <p>
 Data Carpentry is a partnership of several NSF-funded <a href="http://www.nsf.gov/dir/index.jsp?org=BIO" target="_blank">BIO</a> Centers (<a href="http://nescent.org" target="_blank">NESCent</a>, <a href="http://iplantcollaborative.org" target="_blank">iPlant</a>, <a href="http://idigbio.org" target="_blank">iDigBio</a>, <a href="http://beacon-center.org/" target="_blank">BEACON</a> and <a href="http://sesync.org" target="_blank">SESYNC</a>) and <a href="http://software-carpentry.org" target="_blank">Software Carpentry</a>, and is sponsored by the <a href="http://dataone.org" target="_blank">Data Observation Network for Earth</a> (DataONE). The structure and objectives of the curriculum as well as the teaching style are informed by <a href="http://software-carpentry.org" target="_blank">Software Carpentry</a>.
