Added instructors and venue.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ---
 layout: bootcamp
 root: .
-venue: Example Venue
-address: Address
-country: United-States
-humandate: May 8-9, 2050
+venue: Institute for Biostatistics and Medical Informatics, Faculty of Medicine, University of Ljubljana
+address: Institute for Biostatistics and Medical Informatics, Faculty of Medicine, University of Ljubljana, Vrazov trg 2, Ljubljana
+country: Slovenia
+humandate: July 22-239, 2015
 humantime: 9:00 am - 5 pm
-startdate: 2050-05-08
-enddate: 2050-05-09
+startdate: 2015-07-22
+enddate: 2015-07-23
 latlng: 36.0080203,-78.9232326
 registration: open
-instructor: ["Instructor 1"]
+instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
 assistant: ["Assistant 1"] 
 contact: admin@datacarpentry.org
 #raw: raw.github.com/datacarpentry/workshop-template/gh-pages
-eventbrite: 11257077221
+eventbrite: 16911357325
 ---
 <!--
     Edit the values in the parameter block above to be appropriate for your bootcamp.
