Added coordinates and contact details.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ root: .
 venue: Institute for Biostatistics and Medical Informatics, Faculty of Medicine, University of Ljubljana
 address: Institute for Biostatistics and Medical Informatics, Faculty of Medicine, University of Ljubljana, Vrazov trg 2, Ljubljana
 country: Slovenia
-humandate: July 22-239, 2015
+humandate: July 22-23, 2015
 humantime: 9:00 am - 5 pm
 startdate: 2015-07-22
 enddate: 2015-07-23
-latlng: 36.0080203,-78.9232326
+latlng: 46.051251, 14.519000
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
 assistant: ["Assistant 1"] 
-contact: admin@datacarpentry.org
+contact: Tanja.Dreo@nib.si, brane.leskosek@mf.uni-lj.si, peter.juvan@mf.uni-lj.si, a.pawlik@software.ac.uk, a.nenadic@manchester.ac.uk
 #raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 16911357325
 ---
