--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ humandate: July 22-23, 2015
 humantime: 9:00 am - 5 pm
 startdate: 2015-07-22
 enddate: 2015-07-23
-latlng: 46.051091, 14.518077
+latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
-assistant: ["Assistant 1"] 
-contact: Tanja.Dreo@nib.si, brane.leskosek@mf.uni-lj.si, peter.juvan@mf.uni-lj.si, a.pawlik@software.ac.uk, a.nenadic@manchester.ac.uk
+assistant: []
+contact: tanja.dreo@nib.si, brane.leskosek@mf.uni-lj.si, peter.juvan@mf.uni-lj.si, a.pawlik@software.ac.uk, a.nenadic@manchester.ac.uk
 #raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 16911357325
 ---
