Google/OpenStreet map to open in new tab/window.

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
   <strong>Where:</strong>
   {{ page.address }}.
    Get directions with
-  <a href="http://www.openstreetmap.org/?mlat={{ page.latlng | replace:',','&mlon=' }}&zoom=16">OpenStreetMap</a>
+  <a target="_blank" href="http://www.openstreetmap.org/?mlat={{ page.latlng | replace:',','&mlon=' }}&zoom=16">OpenStreetMap</a>
   or
-  <a href="http://maps.google.com/maps?q={{ page.latlng }}">Google Maps</a>.
+  <a target="_blank" href="http://maps.google.com/maps?q={{ page.latlng }}">Google Maps</a>.
 </p>
 {% endif %}
 
