--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enddate: 2015-07-23
 latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
-assistant: []
+assistant: ["TBC"]
 contact: tanja.dreo@nib.si, brane.leskosek@mf.uni-lj.si, peter.juvan@mf.uni-lj.si, a.pawlik@software.ac.uk, a.nenadic@manchester.ac.uk
 #raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 16911357325
