--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: bootcamp
 root: .
 venue: Faculty of Medicine, University of Ljubljana<br>National Institute of Biology, Ljubljana
-address: Institute for Biostatistics and Medical Informatics, Faculty of Medicine, University of Ljubljana, Vrazov trg 2, Ljubljana
+address: Institute for Biostatistics and Medical Informatics, Faculty of Medicine, Vrazov trg 2, Ljubljana
 country: Slovenia
 humandate: July 22-23, 2015
 humantime: 9:00 am - 5 pm
