Only left Tanja and Peter as contacts.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
 assistant: ["TBC"]
-contact: tanja.dreo@nib.si, brane.leskosek@mf.uni-lj.si, peter.juvan@mf.uni-lj.si, a.pawlik@software.ac.uk, a.nenadic@manchester.ac.uk
+contact: tanja.dreo@nib.si, peter.juvan@mf.uni-lj.si
 #raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 16911357325
 ---
