Fixed dates again

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ time, and with less pain.
 <p>
 Our curriculum includes:
 <ul>
-<li>  Day 1 (Monday, 20 July) morning: Getting data out of Excel and into more powerful tools
-<li>  Day 1 (Monday, 20 July) afternoon: Managing data in R.
-<li>  Day 2 (Tuesday, 21 July) morning: Introduction to databases, combining and querying data using SQL.
-<li>  Day 2 (Tuesday, 21 July) afternoon: Collaborative data management & publishing data.
+<li>  Day 1 morning: Getting data out of Excel and into more powerful tools
+<li>  Day 1 afternoon: Managing data in R.
+<li>  Day 2 morning: Introduction to databases, combining and querying data using SQL.
+<li>  Day 2 afternoon: Collaborative data management & publishing data.
 </ul>
 The concepts, skills, and tools we teach are domain-independent, but example problem cases and datasets will be taken from organismal and evolutionary biology, biodiversity science, ecology, and environmental science. 
 </p>
@@ -135,13 +135,13 @@ Tuition for the course is free, but prior registration is required for attending
 <h2>Schedule</h2>
 
 <table class="table table-striped">
-  <tr> <td>Monday</td>  <td>09:00</td>  <td>Thinking beyond Excel; data wrangling in the shell</td> </tr>
+  <tr> <td>Monday, 20 July </td>  <td>09:00</td>  <td>Thinking beyond Excel; data wrangling in the shell</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Data analysis in R</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 14:30.</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
-  <tr> <td>Tuesday</td> <td>09:00</td>  <td>Managing data with SQL</td> </tr>
+  <tr> <td>Tuesday, 21 July</td> <td>09:00</td>  <td>Managing data with SQL</td> </tr>
   <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30.</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Automating data workflows</td> </tr>
