--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@ Tuition for the course is free, but prior registration is required for attending
 
 <table class="table table-striped">
   <tr> <td>Monday, 20 July </td>  <td>09:00</td>  <td>Thinking beyond Excel; data wrangling in the shell</td> </tr>
-  <tr> <td></td>        <td>10:30</td>  <td>Coffee</td> </tr>
+  <tr> <td></td>        <td></td>  <td>Coffee will be served at 10:30</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Data analysis in R</td> </tr>
-  <tr> <td></td>        <td>14:30</td>  <td>Coffee</td> </tr>
+  <tr> <td></td>        <td></td>  <td>Coffee will be served at 14:30</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
   <tr> <td>Tuesday, 21 July</td> <td>09:00</td>  <td>Managing data with SQL</td> </tr>
-  <tr> <td></td>        <td>10:30</td>       <td>Coffee</td> </tr>
+  <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30</td> </tr>
   <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
   <tr> <td></td>        <td>13:00</td>  <td>Automating data workflows</td> </tr>
-  <tr> <td></td>        <td>14:30</td>  <td>Coffee</td> </tr>
+  <tr> <td></td>        <td></td>  <td>Coffee will be served at 14:30</td> </tr>
   <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
 </table>
 
