--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enddate: 2015-07-21
 latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
-assistant: ["TBC"]
+assistant: ["Jure Triglav, Mateusz Kuzak"]
 contact: tanja.dreo@nib.si, peter.juvan@mf.uni-lj.si
 #raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 16911357325
@@ -48,7 +48,11 @@ The concepts, skills, and tools we teach are domain-independent, but example pro
 Data Carpentry's teaching is hands-on, so participants are required to bring their own laptops.  (We will provide instructions on setting up the required software several days in advance, and NESCent does have a few loaner laptops if you can't bring one.) <em>There are no pre-requisites, and we will assume no prior knowledge about the tools.</em>
 </p>
 
-<p>Updates will be posted to this website as they become available.</p>
+
+
+<p> During the workshop we will be using <a href="https://github.com/apawlik/2015-07-22-ljubljana.git">
+    this Etherpad</a>.</p>
+
 
 <!-- This block displays the instructors' names if they are available. -->
 {% if page.instructor %}
