Correct link to Etherpad

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 
 
 
-<p> During the workshop we will be using <a href="https://github.com/apawlik/2015-07-22-ljubljana.git">
+<p> During the workshop we will be using <a href="https://datacarpentry.etherpad.mozilla.org/2015-07-20-ljubljana">
     this Etherpad</a>.</p>
 
 
