--- a/index.html
+++ b/index.html
@@ -11,20 +11,10 @@ enddate: 2015-07-21
 latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
-assistant: ["TBC"]
+assistant: ["Jure Triglav"]
 contact: tanja.dreo@nib.si, peter.juvan@mf.uni-lj.si
-#raw: raw.github.com/datacarpentry/workshop-template/gh-pages
 eventbrite: 16911357325
 ---
-<!--
-    Edit the values in the parameter block above to be appropriate for your bootcamp.
-    Please use three-letter month names for the 'humandate' field.
--->
-
-<!--
-    This block includes the Eventbrite registration widget if 'eventbrite' has been set in the header.
--->
-
 
 <h2>General Information</h2>
 
@@ -36,19 +26,18 @@ time, and with less pain.
 <p>
 Our curriculum includes:
 <ul>
-<li>  Day 1 morning: Getting data out of Excel and into more powerful tools
-<li>  Day 1 afternoon: Managing data in R.
-<li>  Day 2 morning: Introduction to databases, combining and querying data using SQL.
-<li>  Day 2 afternoon: Collaborative data management & publishing data.
+<li>  Day 1 - part 1: Getting data out of Excel and into more powerful tools
+<li>  Day 1 - part 2: Managing data in R.
+<li>  Day 2 - part 1: Workflows and automating repetitive tasks, in particular using the command line shell.
+<li>  Day 2 - part 2: Introduction to databases, combining and querying data using SQL.
 </ul>
-The concepts, skills, and tools we teach are domain-independent, but example problem cases and datasets will be taken from organismal and evolutionary biology, biodiversity science, ecology, and environmental science. 
+
 </p>
 
 <p>
-Data Carpentry's teaching is hands-on, so participants are required to bring their own laptops.  (We will provide instructions on setting up the required software several days in advance, and NESCent does have a few loaner laptops if you can't bring one.) <em>There are no pre-requisites, and we will assume no prior knowledge about the tools.</em>
+Data Carpentry's teaching is hands-on, so participants are required to bring their own laptops.  (We will provide instructions on setting up the required software several days in advance, and NIB does have a few loaner laptops if you can't bring one.) <em>There are no pre-requisites, and we will assume no prior knowledge about the tools.</em>
 </p>
 
-<p>Updates will be posted to this website as they become available.</p>
 
 <!-- This block displays the instructors' names if they are available. -->
 {% if page.instructor %}
@@ -116,37 +105,57 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 <div class="pull-right" style="max-width: 320px; padding-left: 6px;">
 
 </div>
-<p>
-Data Carpentry is a partnership of several NSF-funded <a href="http://www.nsf.gov/dir/index.jsp?org=BIO" target="_blank">BIO</a> Centers (<a href="http://nescent.org" target="_blank">NESCent</a>, <a href="http://iplantcollaborative.org" target="_blank">iPlant</a>, <a href="http://idigbio.org" target="_blank">iDigBio</a>, <a href="http://beacon-center.org/" target="_blank">BEACON</a> and <a href="http://sesync.org" target="_blank">SESYNC</a>) and <a href="http://software-carpentry.org" target="_blank">Software Carpentry</a>, and is sponsored by the <a href="http://dataone.org" target="_blank">Data Observation Network for Earth</a> (DataONE). The structure and objectives of the curriculum as well as the teaching style are informed by <a href="http://software-carpentry.org" target="_blank">Software Carpentry</a>.
-</p>
 
-{% if page.eventbrite %}
+
+<!--{% if page.eventbrite %}
 <h2>Registration</h2>
 <p>
 Tuition for the course is free, but prior registration is required for attending it. Registration is through EventBrite, see below.</p> 
 <iframe src="http://www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt" frameborder="0" width="100%" height="210" scrolling="auto"></iframe>
 {% endif %}
-
-
-<!--
-    Edit this block to show the syllabus and schedule for your bootcamp.
 -->
 
-<h2>Schedule</h2>
 
+
+<h2>Schedule</h2>
 <table class="table table-striped">
-  <tr> <td>Monday, 20 July </td>  <td>09:00</td>  <td>Thinking beyond Excel; data wrangling in the shell</td> </tr>
-  <tr> <td></td>        <td></td>  <td>Coffee will be served at 10:30</td> </tr>
-  <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Data analysis in R</td> </tr>
-  <tr> <td></td>        <td></td>  <td>Coffee will be served at 14:30</td> </tr>
-  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
-  <tr> <td>Tuesday, 21 July</td> <td>09:00</td>  <td>Managing data with SQL</td> </tr>
-  <tr> <td></td>        <td></td>       <td>Coffee will be served at 10:30</td> </tr>
-  <tr> <td></td>        <td>12:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00</td>  <td>Automating data workflows</td> </tr>
-  <tr> <td></td>        <td></td>  <td>Coffee will be served at 14:30</td> </tr>
-  <tr> <td></td>        <td>16:00</td>  <td>Wrap-up</td> </tr>
+<tr> <td>Monday, 20 July </td> <td>09:00 - 9:30</td>  <td>Introduction and setup help</td> </tr>
+     <tr> <td></td> <td>09:30 - 10:00</td> <td>
+      <!-- <a href="http://datacarpentry.github.io/excel-ecology/"> --> Better use of spreadsheets
+	<!--</a>-->
+  (<a href="https://github.com/datacarpentry/data-ecology/blob/gh-pages/messy-data/survey_data_tabs.xls?raw=true">Sample dataset 1.</a>)
+  (<a href="https://github.com/datacarpentry/2015-06-25-PNW/blob/gh-pages/spreadsheet-dh/phm-collection-messy.xls?raw=true">Sample dataset 2</a>)</td> </tr>
+   <tr> <td></td><td>10:00 - 10:30</td> <td>
+    <!-- <a href="http://apawlik.github.io/OpenRefine-ecology/">-->Open Refine<!--</a>--></td> </tr>
+  <tr> <td></td>        <td>10:30 - 11:00</td> <td>Break</td> </tr>
+  <tr> <td></td>        <td>11:00 - 12:00</td> <td><!--<a href="https://apawlik.github.io/2015-06-24-dc-utrecht//R/01-intro-to-R.html">
+  -->Introduction to R<!--</a>--></td> </tr>
+  <tr> <td></td>        <td>12:00 - 13:00</td>  <td>Lunch break</td> </tr>
+  <tr> <td></td>        <td>13:00 - 14:30</td> <td>Working with data in R - part 1</td> </tr>
+  <tr> <td></td>        <td>14:30 - 15:00</td>  <td>Coffee break</td> </tr>
+  <tr> <td></td>        <td>15:00 - 16:45</td>  <td>Working with data in R - part 2</td> </tr>
+  <tr> <td></td>       <td>16:45 - 17:00</td>  <td>Wrap-up</td> </tr>
+  
+  <!-- empty line -->    
+  <tr> <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td></tr>
+ 
+  <tr> <td>Tuesday, 21 July </td> <td>09:00 - 10:30 </td>  <td>
+<!--      <a href="http://apawlik.github.io/2014-11-27-elixiruk-manchester/lessons/shell/">-->
+	Working with command line <!--</a>--> - part 1. 
+  (<a href="https://github.com/apawlik/shell-novice/blob/gh-pages/filesystem.zip?raw=true">Sample dataset.</a>)</td> </tr>
+  <tr> <td></td>        <td>10:30 - 10:45 </td> <td>Break</td> </tr>
+  <tr> <td></td>        <td>10:45 - 12:00</td>  <td>Working with command line - part 2</td> </tr>
+  <tr> <td></td>        <td>12:00 - 13:00 </td> <td>Lunch</td> </tr>
+  <tr> <td></td>        <td>13:00 - 14:00 </td> <td>
+<!--      <a href="http://apawlik.github.io/sql-ecology/"> -->
+	Automating tasks in command line - scripting
+<!--	</a>--></td> </tr>
+  <tr> <td></td>        <td>14:00 - 14:30 </td> <td>Data manipulation with SQL - part 1</td> </tr>
+  <tr> <td></td>        <td>14:30 - 15:00 </td>  <td>Break</td> </tr>
+   <tr> <td></td>       <td>15:00 - 16:30</td>  <td>Data manipulation with SQL - part 2</td> </tr>
+   <tr> <td></td>       <td>16:30 - 17:00</td>  <td>Wrap-up and feedback</td> </tr>
+
+
 </table>
 
 <hr/>
@@ -156,7 +165,7 @@ Tuition for the course is free, but prior registration is required for attending
     (In particular, most bootcamps teach either Python or R, not both.)
 -->
 
-
+<!--
 
 <h2>Additional Resources</h2>
 
@@ -197,9 +206,9 @@ Tuition for the course is free, but prior registration is required for attending
 <li><a href=http://www.cookbook-r.com/Graphs/>Some of R Graphics Cookbook plots</a> - a set of some of the plots from the R Graphics Cookbook by Winston Chang
 <li><a href=http://rgm3.lab.nig.ac.jp/RGM/R_image_list?page=665&init=true>R Graphical Manual</a> - plots from apparently every R CRAN package
 </ul>
+-->
 
-
-<h2>Setup</h2>
+<a id="setup"><h2>Setup</h2></a>
 
 <p>
   To participate in a Data Carpentry bootcamp, 
