link to Eventbrite, cleaned up info on the main page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@ Our curriculum includes:
 </p>
 
 <p>
-Data Carpentry's teaching is hands-on, so participants are required to bring their own laptops.  (We will provide instructions on setting up the required software several days in advance, and NIB does have a few loaner laptops if you can't bring one.) <em>There are no pre-requisites, and we will assume no prior knowledge about the tools.</em>
+Data Carpentry's teaching is hands-on, so participants are required to bring their own laptops.  
+<em>There are no pre-requisites, and we will assume no prior knowledge about the tools.</em>
 </p>
+
+<div class="alert"> <span style="font-size: 14pt;">The participants will need to bring 
+<strong>their own laptops</strong> configured <strong> before </strong>
+    the workshop according to the  <a href="#setup">setup instructions</a>. </span></div>
 
 
 <!-- This block displays the instructors' names if they are available. -->
@@ -56,10 +61,7 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
     In particular, if it is only open to people from a particular institution,
     or if specialized prerequisite knowledge is required, please mention that.
 -->
-<p>
-  <strong>Who:</strong>
-  The course is aimed at graduate students, postdocs, research staff, and other researchers. 
-</p>
+
 
 <!--
     This block displays the address and links to a map showing directions.
@@ -75,13 +77,8 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 </p>
 {% endif %}
 
-<!--
-    Modify the block below if there are any special requirements.
--->
-<p>
-  <strong>Requirements:</strong>
-  Participants must bring a laptop with a few specific software packages installed.
-</p>
+
+
 
 <!--
     This block automatically inserts a contact email address if one has been specified for the page.
@@ -101,10 +98,10 @@ Data Carpentry's teaching is hands-on, so participants are required to bring the
 <p><strong>Twitter</strong>: #datacarpentry</p>
 
 
-<h2>Acknowledgements &amp; Support</h2>
+<!--<h2>Acknowledgements &amp; Support</h2>
 <div class="pull-right" style="max-width: 320px; padding-left: 6px;">
 
-</div>
+</div> -->
 
 
 <!--{% if page.eventbrite %}
@@ -115,6 +112,11 @@ Tuition for the course is free, but prior registration is required for attending
 {% endif %}
 -->
 
+<div class="alert"> <span style="font-size: 14pt;">
+<p><strong>Etherpad</strong>
+   For communication we will be using 
+   <a href="https://datacarpentry.etherpad.mozilla.org/2015-07-20-ljubljana">this Etherpad </a></p>
+</span></div>
 
 
 <h2>Schedule</h2>
