--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enddate: 2015-07-21
 latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
-assistant: ["Jure Triglav"]
+assistant: ["Jure Triglav", "Ziva Ramsak", "Brane L. Leskosek", "Domen Soklic"]
 contact: tanja.dreo@nib.si, peter.juvan@mf.uni-lj.si
 eventbrite: 16911357325
 ---
