Updated links to the OpenRefine files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enddate: 2015-07-21
 latlng: 46.051213, 14.518528
 registration: open
 instructor: ["Aleksandra Pawlik", "Aleksandra Nenadic", "Peter Juvan"]
-assistant: ["Jure Triglav", "Ziva Ramsak", "Brane L. Leskosek", "Domen Soklic"]
+assistant: ["Ziva Ramsak", "Brane L. Leskosek", "Domen Soklic", "Mateusz Kuzak"]
 contact: tanja.dreo@nib.si, peter.juvan@mf.uni-lj.si
 eventbrite: 16911357325
 ---
@@ -128,7 +128,14 @@ Tuition for the course is free, but prior registration is required for attending
   (<a href="https://github.com/datacarpentry/data-ecology/blob/gh-pages/messy-data/survey_data_tabs.xls?raw=true">Sample dataset 1.</a>)
   (<a href="https://github.com/datacarpentry/2015-06-25-PNW/blob/gh-pages/spreadsheet-dh/phm-collection-messy.xls?raw=true">Sample dataset 2</a>)</td> </tr>
    <tr> <td></td><td>10:00 - 10:30</td> <td>
-    <!-- <a href="http://apawlik.github.io/OpenRefine-ecology/">-->Open Refine<!--</a>--></td> </tr>
+    <!-- <a href="http://apawlik.github.io/OpenRefine-ecology/">-->Open Refine<!--</a>--> <br/>
+   <a href="https://dl.dropboxusercontent.com/u/150135718/Portal_rodents_19772002_scinameUUIDs.csv">
+Sample file </a> for the OpenRefine lesson. </br>
+  <a href="https://dl.dropboxusercontent.com/u/150135718/SHORT_Portal_rodents_19772002_scinameUUIDs.csv">
+  Short file </a>for the OpenRefine WebService example.
+ 
+  
+</td> </tr>
   <tr> <td></td>        <td>10:30 - 11:00</td> <td>Break</td> </tr>
   <tr> <td></td>        <td>11:00 - 12:00</td> <td><!--<a href="https://apawlik.github.io/2015-06-24-dc-utrecht//R/01-intro-to-R.html">
   -->Introduction to R<!--</a>--></td> </tr>
