Added links to materials and additional resources

--- a/index.html
+++ b/index.html
@@ -122,27 +122,21 @@ Tuition for the course is free, but prior registration is required for attending
 <h2>Schedule</h2>
 <table class="table table-striped">
 <tr> <td>Monday, 20 July </td> <td>09:00 - 9:30</td>  <td>Introduction and setup help</td> </tr>
-     <tr> <td></td> <td>09:30 - 10:00</td> <td>
-      <!-- <a href="http://datacarpentry.github.io/excel-ecology/"> --> Better use of spreadsheets
-	<!--</a>-->
+     <tr> <td></td> <td>09:30 - 10:30</td> <td>
+      <a href="http://datacarpentry.github.io/excel-ecology/">Better use of spreadsheets</a>
   (<a href="https://github.com/datacarpentry/data-ecology/blob/gh-pages/messy-data/survey_data_tabs.xls?raw=true">Sample dataset 1.</a>)
   (<a href="https://github.com/datacarpentry/2015-06-25-PNW/blob/gh-pages/spreadsheet-dh/phm-collection-messy.xls?raw=true">Sample dataset 2</a>)</td> </tr>
-   <tr> <td></td><td>10:00 - 10:30</td> <td>
-    <!-- <a href="http://apawlik.github.io/OpenRefine-ecology/">-->Open Refine<!--</a>--> <br/>
+    <tr> <td></td>        <td>10:30 - 11:00</td> <td>Break</td> </tr>
+   <tr> <td></td><td>11:00 - 12:00</td> <td>
+    <a href="http://apawlik.github.io/OpenRefine-ecology/">Open Refine</a><br/>
    <a href="https://dl.dropboxusercontent.com/u/150135718/Portal_rodents_19772002_scinameUUIDs.csv">
-Sample file </a> for the OpenRefine lesson. </br>
-  <a href="https://dl.dropboxusercontent.com/u/150135718/SHORT_Portal_rodents_19772002_scinameUUIDs.csv">
-  Short file </a>for the OpenRefine WebService example.
- 
-  
-</td> </tr>
-  <tr> <td></td>        <td>10:30 - 11:00</td> <td>Break</td> </tr>
-  <tr> <td></td>        <td>11:00 - 12:00</td> <td><!--<a href="https://apawlik.github.io/2015-06-24-dc-utrecht//R/01-intro-to-R.html">
-  -->Introduction to R<!--</a>--></td> </tr>
+Sample file </a> for the OpenRefine lesson. </br></td> </tr>
   <tr> <td></td>        <td>12:00 - 13:00</td>  <td>Lunch break</td> </tr>
-  <tr> <td></td>        <td>13:00 - 14:30</td> <td>Working with data in R - part 1</td> </tr>
+  <tr> <td></td>        <td>13:00 - 14:30</td> <td>
+  <a href="http://apawlik.github.io/R-ecology/">Introduction to R</a></td> </tr>
   <tr> <td></td>        <td>14:30 - 15:00</td>  <td>Coffee break</td> </tr>
-  <tr> <td></td>        <td>15:00 - 16:45</td>  <td>Working with data in R - part 2</td> </tr>
+  <tr> <td></td>        <td>15:00 - 16:45</td>  <td>
+  <a href="http://apawlik.github.io/R-ecology/">Working with data in R</a></td> </tr>
   <tr> <td></td>       <td>16:45 - 17:00</td>  <td>Wrap-up</td> </tr>
   
   <!-- empty line -->    
@@ -174,10 +168,11 @@ Sample file </a> for the OpenRefine lesson. </br>
     (In particular, most bootcamps teach either Python or R, not both.)
 -->
 
-<!--
+
 
 <h2>Additional Resources</h2>
 
+<!--
 <h3>shell</h3>
 <ul>
 <li><a href=http://fosswire.com/post/2007/08/unixlinux-command-cheat-sheet/>Unix/Linux Command Reference</a>
@@ -185,7 +180,7 @@ Sample file </a> for the OpenRefine lesson. </br>
 >Shell cheat sheet</a>
 <li><a href=http://software-carpentry.org/v4/shell/index.html>Software Carpentry shell lessons</a>
 </ul>
-
+ -->
 <h3>R</h3>
 
 <b>Where to learn more about R</b>
@@ -215,7 +210,7 @@ Sample file </a> for the OpenRefine lesson. </br>
 <li><a href=http://www.cookbook-r.com/Graphs/>Some of R Graphics Cookbook plots</a> - a set of some of the plots from the R Graphics Cookbook by Winston Chang
 <li><a href=http://rgm3.lab.nig.ac.jp/RGM/R_image_list?page=665&init=true>R Graphical Manual</a> - plots from apparently every R CRAN package
 </ul>
--->
+
 
 <a id="setup"><h2>Setup</h2></a>
 
