--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@ Sample file </a> for the OpenRefine lesson. </br></td> </tr>
   <tr> <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td></tr>
  
   <tr> <td>Tuesday, 21 July </td> <td>09:00 - 10:30 </td>  <td>
-<!--      <a href="http://apawlik.github.io/2014-11-27-elixiruk-manchester/lessons/shell/">-->
-	Working with command line <!--</a>--> - part 1. 
+<a href="http://apawlik.github.io/shell-ecology/">
+	Working with command line </a> - part 1. 
   (<a href="https://github.com/apawlik/shell-novice/blob/gh-pages/filesystem_example.zip?raw=true">Sample dataset.</a>)</td> </tr>
   <tr> <td></td>        <td>10:30 - 10:45 </td> <td>Break</td> </tr>
   <tr> <td></td>        <td>10:45 - 12:00</td>  <td>Working with command line - part 2</td> </tr>
   <tr> <td></td>        <td>12:00 - 13:00 </td> <td>Lunch</td> </tr>
   <tr> <td></td>        <td>13:00 - 14:00 </td> <td>
-<!--      <a href="http://apawlik.github.io/sql-ecology/"> -->
 	Automating tasks in command line - scripting
 <!--	</a>--></td> </tr>
-  <tr> <td></td>        <td>14:00 - 14:30 </td> <td>Data manipulation with SQL - part 1</td> </tr>
+  <tr> <td></td>        <td>14:00 - 14:30 </td> <td>
+<a href="http://apawlik.github.io/sql-ecology/">Data manipulation with SQL - part 1</a></td> </tr>
   <tr> <td></td>        <td>14:30 - 15:00 </td>  <td>Break</td> </tr>
    <tr> <td></td>       <td>15:00 - 16:30</td>  <td>Data manipulation with SQL - part 2</td> </tr>
    <tr> <td></td>       <td>16:30 - 17:00</td>  <td>Wrap-up and feedback</td> </tr>
